--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 data/normalized_count_matrix_88559monocytes_22593hostgenes.rds filter=lfs diff=lfs merge=lfs -text
+*22593hostgenes.rds filter=lfs diff=lfs merge=lfs -text
